<resources>
    <!-- Main -->
    <string name="app_name">MorozovHints</string>

    <!-- MainActivity -->

    <!-- CreateMessageActivity -->
    <string name="send">Отправить (Явный Intent))</string>
    <string name="sendActive">Отправить (Неявный Intent - Действие))</string>
    <string name="send_hint">Введите сообщение</string>
    <string name="ToSpinnerActivity">К спиннеру цвета</string>

    <!-- ColorSpinnerActivity-->
    <string name="buttonColorDescr">Применить</string>
    <string-array name="spinnerColorChange">
        <item>Черный</item>
        <item>Синий</item>
        <item>Белый</item>
        <item>Зеленый</item>
    </string-array>
    <string-array name="textViewColorChange">
        <item>Описание черного цвета</item>
        <item>Описание синего цвета</item>
        <item>Описание белого цвета</item>
        <item>Описание зеленого цвета</item>
    </string-array>

    <!-- TimerActivity -->
    <string name="timerInit">00:00:00</string>
    <string name="timerStart">Пуск</string>
    <string name="timerStop">Стоп</string>
    <string name="timerReset">Сброс</string>

    <!-- LoginActivity -->
    <string name="logo_Disc">Логотип</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="hint_name">Введите Ваше имя:</string>
    <string name="hint_password">Введите Ваш пароль:</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="toast_not_filled">Все полня необходимо заполнить.</string>
    <string name="SendDescription">Отправить заказ</string>


    <!-- CreateOrderActivity -->
    <string name="ChooseDrink">Выберите вид напитка?</string>
    <string name="LemonCheckBox">Лемон</string>
    <string name="SugarTextBox">Сахар</string>
    <string name="MilkCheckBox">Молоко</string>
    <string name="WhatToAddText">"Что добавить в ваш %s?"</string>
    <string name="TeaRadioButton">Чай</string>
    <string name="CoffeeRadioButton">Кофе</string>
    <string name="ClientWelcomeText">"Привет, %s! Что закажите?"</string>
    <string name="logoCup">тип кружки</string>

    <string-array name="Options_of_coffee">
        <item>Латте</item>
        <item>Эспрессо</item>
        <item>Американо</item>
    </string-array>

    <string-array name="Options_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>

    <!-- L5ShopMainActivity -->
    <string-array name="ShopItems">
        <item>Кружка</item>
        <item>Стакан (Пусто)</item>
        <item>Бокал (Пусто)</item>
        <item>SeekBar</item>
    </string-array>

    <string name="titleCupGradient">Градиентная кружка</string>
    <string name="titleCupRed">Красная кружка</string>
    <string name="titleCupBlack">Черная кружка</string>

    <string name="infoCupGradient">Разноцветный оттенок.</string>
    <string name="infoCupRed">Ярко - красный цвет.</string>
    <string name="infoCupBlack">Чернее некуда.</string>
    <string name="buttonDownload">Загрузка картинки</string>

    <!-- activity_l6_json_weather -->
    <string name="CityWeather">Погода в городе</string>
    <string name="printCity">Введите название города</string>
    <string name="ExampleMoscow">Пример: Москва</string>
    <string name="Start">Поиск</string>

    <!-- activity_l7_data_store_main -->
    <string name="ResetHighScore">Сброс всех результатов</string>
    <string name="NewGameStart">Новая игра</string>


    <!-- activity_l71_notes -->

    <string name="DayOfWeek">День недели -</string>
    <string name="hint_title">Заголовок заметки</string>
    <string name="hint_description">Описание заметки</string>
    <string name="AddNote">Добавить заметку</string>
    <string name="priority1">1</string>
    <string name="priority2">2</string>
    <string name="priority3">3</string>
    <string name="Surname">Фамилия:</string>
    <string name="Name">Имя:</string>
    <string-array name="day_Of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <!-- activity_l9 -->

    <string name="addUser">Добавить пользователя</string>
    <string name="userName">Имя: </string>
    <string name="userSurname">Фамилия: </string>
    <string name="userAge">Возраст: </string>
    <string name="userGender">Пол: </string>
    <string name="EnterGender">Введите пол:</string>
    <string name="EnterAge">Введите возраст</string>
    <string name="EnterSurname">Введите Фамилию:</string>
    <string name="EnterName">Введите имя:</string>
    <string name="DownloadToFireCloud">Загрузить в FireCloud</string>
    <string name="MainTestZone">Тестовая зона</string>
    <string name="count">Count:</string>
    <string name="name">Name:</string>
    <string name="Save">Сохранить</string>
    <string name="ErrorInput">Ошибка ввода</string>

    <string name="game_rules"><![CDATA[
Перед вами будет три фигуры, две снизу, одна сверху. В двух из них будут числа.
Необходимо, чтобы сумма чисел из нижних фигур была равна числу в верхней фигуре,
для чего нужно вставить недостающее число.
Удачи!]]></string>
    <string name="LoadItem">Загрузить предмет</string>
    <string name="inputID">Введите id</string>
    <string name="RulesAccepted">Понятно</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ChooseDifficult">Выберите уровень сложности:</string>
    <string name="TestLevel">Тестовый</string>
    <string name="EasyLevel">Легкий</string>
    <string name="NormalLevel">Средний</string>
    <string name="HardLevel">Сложный</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="question_mark">\?</string>
    <string name="data_from_fragment1">data_from_Fragment1</string>
    <string name="to_fragment_2">To Fragment 2</string>
    <string name="city">Город:</string>
    <string name="weather">Погода:</string>
    <string name="Download">Загрузить</string>

    <string name="service">Service</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="intent_service">Intent Service</string>
    <string name="job_scheduler">Job Scheduler</string>
    <string name="job_intent_service">Job Intent Service</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="work_manager">Work Manager</string>
    <string name="tv_mad2">tv_mad2</string>

    <string name="calculate">Calculate</string>
</resources>