<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".l130_services.MainActivityService">


    <Button
        android:id="@+id/simple_service"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/service" />

    <Button
        android:id="@+id/foreground_service"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/foreground_service"
        />

    <ProgressBar
        android:id="@+id/progressBarLoading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:max="100"
        android:progress="0"
        tools:progress="30"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/intent_service"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/intent_service"

        />

    <Button
        android:id="@+id/job_scheduler"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/job_scheduler"

        />

    <Button
        android:id="@+id/job_intent_service"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"

        android:layout_weight="1"
        android:text="@string/job_intent_service" />

    <Button
        android:id="@+id/alarm_manager"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"

        android:layout_weight="1"
        android:text="@string/alarm_manager" />

    <Button
        android:id="@+id/work_manager"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"

        android:layout_weight="1"
        android:text="@string/work_manager" />

</LinearLayout>