<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".l110_jetpack.presentation.fragments.ChooseLevelFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewChooseDifficult"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ChooseDifficult"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonTestLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/TestLevel"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonEasyLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/EasyLevel"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonNormalLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/NormalLevel"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonHardLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/HardLevel"
                android:textSize="36sp" />
        </LinearLayout>
    </FrameLayout>
</layout>