<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".L4.L4MainLoginActivity">


    <ImageView
        android:id="@+id/imageViewLogoCafe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Fallen"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="Fallen"
        android:hint="@string/hint_password" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_order"
        android:onClick="onClickCreateOrder"
/>
</LinearLayout>