<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".L4.L4CreateOrderActivity"
    android:background="@color/cardview_light_background">
    
    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ClientWelcomeText"
        android:layout_margin="5dp"
        android:textSize="24sp"
        />

    <RadioGroup
        android:id="@+id/RadioGroupCoffeeTea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TeaRadioButton"
            android:onClick="onClickChangeDrink"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CoffeeRadioButton"
            android:onClick="onClickChangeDrink"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdittion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/RadioGroupCoffeeTea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/WhatToAddText"
        android:layout_margin="5dp"
        android:textSize="24sp"
        />

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MilkCheckBox"
        app:layout_constraintTop_toBottomOf="@id/textViewAdittion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkBoxSugar"
        android:layout_margin="5dp"
        />

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SugarTextBox"
        app:layout_constraintTop_toBottomOf="@id/textViewAdittion"
        app:layout_constraintStart_toEndOf="@+id/checkBoxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"
        android:layout_margin="5dp"
        />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LemonCheckBox"
        app:layout_constraintTop_toBottomOf="@id/textViewAdittion"
        app:layout_constraintStart_toEndOf="@+id/checkBoxSugar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/TextViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkBoxLemon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        android:text="@string/ChooseDrink"
        android:textSize="24sp"
        />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Options_of_coffee"
        app:layout_constraintTop_toBottomOf="@id/TextViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        android:visibility="invisible"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Options_of_tea"
        app:layout_constraintTop_toBottomOf="@id/TextViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        android:visibility="visible"
        android:scrollbarSize="18dp"
        />

    <Button
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/SendDescription"
        android:text="@string/SendDescription"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTea"

        android:onClick="sendOrder"/>


</androidx.constraintlayout.widget.ConstraintLayout>