<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".L03.L3MainTimerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextViewTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="72dp"
            android:gravity="center"
            android:text="@string/timerInit" />

        <Button
            android:id="@+id/buttonStartTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timerStart"
            android:layout_margin="5dp"
            android:onClick="startTimer"/>

        <Button
            android:id="@+id/buttonStopTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timerStop"
            android:layout_margin="5dp"
            android:onClick="stopTimer"/>

        <Button
            android:id="@+id/buttonResetTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timerReset"
            android:layout_margin="5dp"
            android:onClick="resetTimer"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>