<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".L06_json_download.L6WeatherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewPrintCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/printCity"
            android:layout_margin="10dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/editTextTextSetCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/ExampleMoscow"
            android:layout_margin="10dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/buttonJsonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Start"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:onClick="getCityWeather"/>

        <TextView
            android:id="@+id/textViewCityWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="24sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>